--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.desafio.githubsearchjavapop">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -11,13 +12,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".controller.DetailsActivity"></activity>
         <activity android:name=".controller.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".controller.DetailsActivity"
+            android:parentActivityName=".controller.MainActivity">
+            <meta-data
+                android:name="android.support.Parent_Activity"
+                android:value=".controller.MainActivity"/>
         </activity>
     </application>
 
